crates/fastc/src/lexer/snapshots/fastc__lexer__tests__binary_operators.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    LParen,
    Ident(
        "a",
    ),
    Plus,
    Ident(
        "b",
    ),
    RParen,
    LParen,
    Ident(
        "c",
    ),
    Minus,
    Ident(
        "d",
    ),
    RParen,
    LParen,
    Ident(
        "e",
    ),
    Star,
    Ident(
        "f",
    ),
    RParen,
    LParen,
    Ident(
        "g",
    ),
    Slash,
    Ident(
        "h",
    ),
    RParen,
    LParen,
    Ident(
        "i",
    ),
    Percent,
    Ident(
        "j",
    ),
    RParen,
    Eof,
]
