crates/fastc/src/lexer/snapshots/fastc__lexer__tests__bitwise_operators.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    LParen,
    Ident(
        "a",
    ),
    And,
    Ident(
        "b",
    ),
    RParen,
    LParen,
    Ident(
        "c",
    ),
    Or,
    Ident(
        "d",
    ),
    RParen,
    LParen,
    Ident(
        "e",
    ),
    Caret,
    Ident(
        "f",
    ),
    RParen,
    Tilde,
    Ident(
        "g",
    ),
    LParen,
    Ident(
        "h",
    ),
    Shl,
    Ident(
        "i",
    ),
    RParen,
    LParen,
    Ident(
        "j",
    ),
    Shr,
    Ident(
        "k",
    ),
    RParen,
    Eof,
]
