crates/fastc/src/lexer/snapshots/fastc__lexer__tests__builtins.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    Addr,
    LParen,
    Ident(
        "x",
    ),
    RParen,
    Deref,
    LParen,
    Ident(
        "p",
    ),
    RParen,
    At,
    LParen,
    Arr,
    Comma,
    Ident(
        "i",
    ),
    RParen,
    Cast,
    LParen,
    I32,
    Comma,
    Ident(
        "x",
    ),
    RParen,
    Cstr,
    LParen,
    StringLit(
        "hello",
    ),
    RParen,
    Bytes,
    LParen,
    StringLit(
        "hello",
    ),
    RParen,
    Discard,
    LParen,
    Ident(
        "x",
    ),
    RParen,
    None,
    LParen,
    I32,
    RParen,
    Some,
    LParen,
    Ident(
        "x",
    ),
    RParen,
    Eof,
]
