crates/fastc/src/lexer/snapshots/fastc__lexer__tests__comments.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    LineComment(
        "// single line comment",
    ),
    Fn,
    Ident(
        "foo",
    ),
    LParen,
    RParen,
    Arrow,
    Void,
    LBrace,
    BlockComment(
        "/* multi\n       line\n       comment */",
    ),
    Return,
    Semi,
    RBrace,
    Eof,
]
