crates/fastc/src/lexer/snapshots/fastc__lexer__tests__comparison_operators.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    LParen,
    Ident(
        "a",
    ),
    EqEq,
    Ident(
        "b",
    ),
    RParen,
    LParen,
    Ident(
        "c",
    ),
    NotEq,
    Ident(
        "d",
    ),
    RParen,
    LParen,
    Ident(
        "e",
    ),
    Lt,
    Ident(
        "f",
    ),
    RParen,
    LParen,
    Ident(
        "g",
    ),
    LtEq,
    Ident(
        "h",
    ),
    RParen,
    LParen,
    Ident(
        "i",
    ),
    Gt,
    Ident(
        "j",
    ),
    RParen,
    LParen,
    Ident(
        "k",
    ),
    GtEq,
    Ident(
        "l",
    ),
    RParen,
    Eof,
]
