crates/fastc/src/lexer/snapshots/fastc__lexer__tests__control_flow.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    If,
    While,
    For,
    Switch,
    Case,
    Default,
    Break,
    Continue,
    Return,
    Defer,
    Eof,
]
