crates/fastc/src/lexer/snapshots/fastc__lexer__tests__let_statement.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    Let,
    Ident(
        "x",
    ),
    Colon,
    I32,
    Eq,
    IntLit(
        42,
    ),
    Semi,
    Eof,
]
