crates/fastc/src/lexer/snapshots/fastc__lexer__tests__literals.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    IntLit(
        42,
    ),
    HexLit(
        255,
    ),
    BinLit(
        10,
    ),
    OctLit(
        63,
    ),
    FloatLit(
        3.14,
    ),
    FloatLit(
        25000000000.0,
    ),
    True,
    False,
    StringLit(
        "hello\nworld",
    ),
    Eof,
]
