crates/fastc/src/lexer/snapshots/fastc__lexer__tests__logical_operators.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    LParen,
    Ident(
        "a",
    ),
    AndAnd,
    Ident(
        "b",
    ),
    RParen,
    LParen,
    Ident(
        "c",
    ),
    OrOr,
    Ident(
        "d",
    ),
    RParen,
    Not,
    Ident(
        "e",
    ),
    Eof,
]
