crates/fastc/src/lexer/snapshots/fastc__lexer__tests__simple_function.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    Fn,
    Ident(
        "main",
    ),
    LParen,
    RParen,
    Arrow,
    Void,
    LBrace,
    Return,
    Semi,
    RBrace,
    Eof,
]
