crates/fastc/src/lexer/snapshots/fastc__lexer__tests__struct_definition.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    AtRepr,
    LParen,
    Ident(
        "C",
    ),
    RParen,
    Struct,
    Ident(
        "Point",
    ),
    LBrace,
    Ident(
        "x",
    ),
    Colon,
    I32,
    Comma,
    Ident(
        "y",
    ),
    Colon,
    I32,
    Comma,
    RBrace,
    Eof,
]
