crates/fastc/src/lexer/snapshots/fastc__lexer__tests__type_constructors.snap
---
source: crates/fastc/src/lexer/mod.rs
expression: tokens
---
[
    Ref,
    LParen,
    I32,
    RParen,
    Mref,
    LParen,
    I32,
    RParen,
    Raw,
    LParen,
    I32,
    RParen,
    Rawm,
    LParen,
    I32,
    RParen,
    Own,
    LParen,
    I32,
    RParen,
    Slice,
    LParen,
    I32,
    RParen,
    Arr,
    LParen,
    I32,
    Comma,
    IntLit(
        10,
    ),
    RParen,
    Opt,
    LParen,
    I32,
    RParen,
    Res,
    LParen,
    I32,
    Comma,
    Ident(
        "Error",
    ),
    RParen,
    Eof,
]
